Add a link to the batch on the adaptation page (#12)
